# zone_benchmarks

./: CMakeLists.txt  Dockerfile  README.md  remove_docker.sh  run_docker.sh
benchmarks/: CMakeLists.txt  bench.cpp  knot.c  simdzonehelper.h
benchmarks/performancecounters/: benchmarker.h
plots/: bars.py
